tests/expected/recovery/expressions/006_deeply_nested_broken.txt
{
  "type": "Program",
  "start": 0,
  "end": 211,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 139,
      "end": 180,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 145,
          "end": 179,
          "id": {
            "type": "Identifier",
            "start": 145,
            "end": 151,
            "name": "broken"          },
          "init": {
            "type": "LogicalExpression",
            "start": 156,
            "end": 178,
            "operator": "||",
            "left": {
              "type": "BinaryExpression",
              "start": 156,
              "end": 172,
              "operator": "+",
              "left": {
                "type": "Identifier",
                "start": 156,
                "end": 157,
                "name": "a"              },
              "right": {
                "type": "BinaryExpression",
                "start": 161,
                "end": 171,
                "operator": "*",
                "left": {
                  "type": "Identifier",
                  "start": 161,
                  "end": 162,
                  "name": "b"                },
                "right": {
                  "type": "Identifier",
                  "start": 166,
                  "end": 167,
                  "name": "c"                }              }            },
            "right": {
              "type": "Identifier",
              "start": 177,
              "end": 178,
              "name": "d"            }          }        }
      ]    },
    {
      "type": "VariableDeclaration",
      "start": 181,
      "end": 210,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 187,
          "end": 209,
          "id": {
            "type": "Identifier",
            "start": 187,
            "end": 205,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 208,
            "end": 209,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 69,
      "value": " Deep nesting with a break three levels down. Each outer paren must"
    },
    {
      "type": "Line",
      "start": 70,
      "end": 138,
      "value": " close cleanly even though the innermost expression is incomplete."
    }
  ],
  "errors": [
    {
      "code": "K2020",
      "severity": "error",
      "message": "Expected expression after operator",
      "line": 3,
      "column": 32,
      "offset": 170
    }
  ]
}
error[K2020]: Expected expression after operator
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/006_deeply_nested_broken.js:3:32
   |
 3 | const broken = ((a + (b * (c - ))) || d);
   |                                ^
  = note: see TS1109

--- Statistics ---
Arena: used=37760B reserved=16777216B ratio=0%
Parse errors: 1
